fixing media query on mobile landscape, increasing nunber of question ask, adding alert to wrong answer.  Need to fix countdown clock. Broke because of alert

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,7 +337,11 @@ and (max-device-width: 830px) {
     }
 
     #image-hands {
-        width: 50vw;
+        width: 40vw;
+    }
+
+    .main-conatainer {
+        height: auto !important;
     }
 
  }
